--- a/public/index.html
+++ b/public/index.html
@@ -11,5 +11,9 @@
 
     <title>Dashbord</title>
   </head>
-  <body></body>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    
+  </body>
 </html>
